# progetto_so

./: .gitignore  CMakeLists.txt  Gestore.c  Gestore.h  Makefile  README.md  Studente.c  Studente.h  gestore.c  gestore.h  macros.h  settings_reader.c  settings_reader.h  test.c
utilities/: ipc_utils.c  ipc_utils.h  macros.h  settings_reader.c  settings_reader.h  types.h  utils.c  utils.h
